[package]
name = "fuel-abi-types"
version = "0.2.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-types"
description = "Serializable type representation for working with the Fuel VM ABI."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.1"
lazy_static = "1.4.0"
thiserror = "1"
