[package]
name = "fuel-abi-types"
version = "0.8.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-types"
description = "Serializable type representation for working with the Fuel VM ABI."

[dependencies]
itertools = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = "2.0.15"
regex = "1.7.1"
lazy_static = "1.4.0"
thiserror = "1"
